# layout_gen

./: .gitignore  README.md  pyproject.toml
docs/: PLAN.md  RL_GUIDE.md
layout_gen/: __init__.py  pdk.py  transistor.py  visualize.py
layout_gen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
layout_gen/cells/: __init__.py  bit_cell.py  standard.py  tap.py  vias.py
layout_gen/drc/: __init__.py  base.py  klayout_runner.py  magic_runner.py  registry.py
layout_gen/lvs/: __init__.py  base.py  magic_runner.py  netlist.py  registry.py
layout_gen/pdks/: gf180mcuD.yaml  sky130A.yaml  tsmc180.yaml
layout_gen/repair/: PLAN.md  __init__.py  analyze_zones.py  augment.py  augment_trajectories.py  build_catalog.py  catalog.py  dataset.py  diagnose.py  features.py  infer.py  mine_trajectories.py  model.py  perturb.py  primitives.py  seeds.py  test_repair.py  train.py  zones.py
layout_gen/repair/notes/: diffusion_lessons.tex
layout_gen/rl/: __init__.py
layout_gen/rl/env/: __init__.py  action_space.py  connectivity.py  layout_env.py  observation.py  place_action.py  placement_intent.py  reward.py  route_action.py  runner.py  spice_ref.py
layout_gen/rl/policy/: __init__.py  network.py  sb3.py
layout_gen/rl/scripts/: ablation.py  eval.py  extract_demos.py  generate.py  inspect_gds.py  train_bc.py  train_ppo.py
layout_gen/rl/tests/: test_ablation.py  test_bc.py  test_connectivity.py  test_coupled_place.py  test_dataset.py  test_demo_extract.py  test_env.py  test_env_topology.py  test_eval.py  test_generate.py  test_inspect_gds.py  test_lvs_wiremask_ibrl.py  test_multi_topology.py  test_no_stack_guard.py  test_phased_reward.py  test_pitch_snap.py  test_place.py  test_placement_intent.py  test_policy.py  test_ppo.py  test_rgcn.py  test_route.py  test_sb3_policy.py  test_topology_encoder.py  test_topology_parser.py
layout_gen/rl/topology/: __init__.py  (+2 more)
layout_gen/synth/: __init__.py  auto_router.py  constraints.py  corridor.py  euler.py  loader.py  netlist.py  placer.py  port_resolver.py  router.py  synthesizer.py
layout_gen/templates/: transistor.yaml
layout_gen/tests/: test_geo.py  test_synthesis.py
scripts/: eval_checkpoint.sh  train_followup.sh
(+40 files in other folders)
