[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layout_gen"
version = "0.1.0"
description = "Parametric SRAM cell layout generation with DRC-aware repair"
requires-python = ">=3.10"
dependencies = [
    "gdsfactory>=7.0",
    "pyyaml",
]

[project.optional-dependencies]
# DRC runner (Phase 1 validation)
drc = ["klayout>=0.28"]
# Phase 2 repair agent
ml  = ["torch>=2.0", "torch-geometric", "scikit-learn"]

[tool.setuptools.packages.find]
where = ["."]
include = ["layout_gen*"]
