[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layout_gen"
version = "0.1.0"
description = "Parametric SRAM cell layout generation with DRC-aware repair"
requires-python = ">=3.10"
dependencies = [
    "gdsfactory>=7.0",
    "pyyaml",
]

[project.optional-dependencies]
# DRC runner (Phase 1 validation)
drc = ["klayout>=0.28"]
# ML margin predictor + parameter optimiser
ml  = ["scikit-learn>=1.3", "scipy>=1.11"]
# Full ML stack with optional GPU training
ml-full = ["scikit-learn>=1.3", "scipy>=1.11", "pandas"]
# RL layout generator (env + training)
rl = [
    "torch>=2.0",
    "numpy>=1.24",
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "sb3-contrib>=2.3",
]
# Test runner
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["layout_gen*"]
